--- a/src/sass/components/landing.scss
+++ b/src/sass/components/landing.scss
@@ -330,8 +330,8 @@ $width: 100%;
             margin-top: 16.7rem;
         }
         @include bp($width-5){
-            width: 24rem;
-            margin-top: 15.7rem;
+            width: 21rem;
+            margin-top: 14.7rem;
             @include bph(450){
                 margin-top: 15rem;
             }
